syntax = "proto3";

package erda.msp.menu;
option go_package = "github.com/erda-project/erda-proto-go/msp/menu/pb";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "common/openapi.proto";

service MenuService {
  option (erda.common.openapi_service) = {
    service: "msp",
    auth: {
      check_login: true,
      check_token: true,
    }
  };

  rpc GetMenu (GetMenuRequest) returns (GetMenuResponse)  {
    option (google.api.http) = {
      get: "/api/msp/tenant/menu",
    };
    option (erda.common.openapi) = {
      path: "/api/msp/tenant/menu"
    };
  }

  rpc GetSetting (GetSettingRequest) returns (GetSettingResponse)  {
    option (google.api.http) = {
      get: "/api/msp/setting/{tenantGroup}",
    };
    option (erda.common.openapi) = {
      path: "/api/micro-service/setting/tenantGroup/{tenantGroup}"
    };
  }
}

message GetMenuRequest {
  string tenantId = 1 [(validator.field) = {string_not_empty: true}];
  string type     = 2 [(validator.field) = {string_not_empty: true}];
}

message GetMenuResponse {
  repeated MenuItem data = 1;
}

message MenuItem {
  string              clusterName = 1;
  string              clusterType = 2;
  string              key         = 3;
  string              cnName      = 4;
  string              enName      = 5;
  string              href        = 6;
  map<string, string> params      = 7;
  repeated MenuItem   children    = 8;
  // 前端用于判断菜单是否显示，默认引导页为true，功能页为false，当tenant存在时进行反转
  bool                exists      = 9;
  // 内部字段: 强制显示
  bool                mustExists  = 10;
  // 内部字段: 只在K8S集群显示
  bool                onlyK8S     = 11;
  // 内部字段: 只在非K8S集群显示
  bool                onlyNotK8S  = 12;
}

message GetSettingRequest {
  string tenantGroup = 1 [(validator.field) = {string_not_empty: true}];
  string tenantId    = 2;
}

message GetSettingResponse {
  repeated EngineSetting data = 1;
}

message EngineSetting {
  string              addonName = 1;
  string              cnName    = 2;
  string              enName    = 3;
  map<string, string> config    = 4;
}
